src/test/deca/syntax/invalid/LE/ClassParenthese.deca
//test invalide
//class avec une parenthese au lieu des crochets

class c1 (
    int a ;
) 